Revision history for Tesla-API

1.02 UNREL
    - Add uri(); Generates and returns a new URI object (to be inherited)

1.01    2022-04-22
    - Unit test suite now has 90% coverage
    - _decode() is now an object method as opposed to a simple function
    - _api_attempts() now resets on a false value, and we reset it at the
      beginning of each call to _tesla_api_call()
    - useragent_string() and useragent_timeout() now set a flag that the mech()
      object needs to be re-instantiated, so changes are reflected in runtime
    - _tesla_api_call() now returns a hashref with error and displays a warning
      if all API_TIMEOUT_RETRIES get exhausted, instead of croaking

1.00    2022-04-19
    - This version is now deemed stable; The user-facing API calls will now
      remain consistent going forward
    - Each API cache object now contains the time it was stored. This allows
      each cache object to time out individually (fixes #10)
    - Added useragent_string() and useragent_timeout() (overrides constants)
    - Added new POD section detailing the constants/overrides
    - Fix issue in token validation where the token would always be classified
      as expired
    - All Tesla API calls are now routed through a new _tesla_api_call() method;
      accepts a $request, returns a $response. This allows all calls to route
      through the API retry functionality
    - Added _api_attempts(); returns the number of attempts we've made for each
      individual call to Tesla's API
    - Renamed _cache() to _api_cache()
    - Renamed CACHE_FILE to AUTH_CACHE_FILE
    - Added _authentication_cache_file() which allows changing the default
      AUTH_CACHE_FILE path to something custom (primarily for testing)
    - Moved call to _authentication_code() from _access_token() to
      _access_token_generate()
    - Rename _access_token_validate() to _access_token_valid()
    - _tesla_api_call() now returns $status, $code and
      $response->decoded_content