@@ -2,6 +2,9 @@ Revision history for Tesla-API
 
 1.02 UNREL
     - Add uri(); Generates and returns a new URI object (to be inherited)
+    - Add uuid(); Each object now has its own cache. All cache data and related
+      mechanism attributes are confined and will not be modified by other
+      objects, whether in the same or separate process (closes #11)
 
 1.01    2022-04-22
     - Unit test suite now has 90% coverage
